assets/css/development/style.css
/* ... */
.nav-tabs a:first-child {
  background-image: linear-gradient(to right, #e2accb, #c96ea3);
}
.nav-tabs a:nth-child(2) {
  background-image: linear-gradient(to right, #c96ea3, #ba4d8d);
}
.nav-tabs a:last-child {
  background-image: linear-gradient(to right, #a15087, #82296e);
}
.nav-tabs a:hover, .nav-tabs a:active {
  background-image: linear-gradient(#85cdc7, #85cdc7);
}

.sub-tabs > a, .sub-tabs-2 > a {
  color: #fff !important;
  font-size: 14px !important;
  font-weight: bold !important;
  display: flex !important;
  align-items: center;
  justify-content: center;
}

.sub-tabs-2 {
  background-image: linear-gradient(to right, #b65c97, #9a4889);
  margin-right: -1px;
}

.sub-tabs-2 a:hover, .sub-tabs-2 a.active,
.sub-tabs a:hover, .sub-tabs a.active {
  background-image: linear-gradient(#85cdc7, #85cdc7) !important;
}

.sub-tabs.sub-tabs-sticky-early > a:first-child {
  padding-left: 0;
}

.sub-tabs.sub-tabs-sticky-early > a:not(:last-of-type) {
  margin-right: -118px;
}
.sub-tabs.second-row > a:not(:last-of-type) {
  margin-right: -136px;
}

@media (max-width: 37.5em) {
  .sub-tabs.sub-tabs-sticky-early > a:not(:last-of-type) {
    margin-right: -37px;
  }
}

.stages-nav .text-box {
  background-color: #c769a0;
  color: #fff;
  padding: 60px 0;
  text-align: center;
  font-size: 18px;
}

.sub-tabs > a {
  color: #fff !important;
  display: block;
  text-align: center;
}
.sub-tabs > a:first-child {
  -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
  margin-right: -110px;
  position: relative;
  z-index: 99;
}

.tab-heading {
  color: #85cdc7;
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.tab-text {
  font-size: 17px;
  padding-right: 134px;
  color: #000;
}

.tab-sub-text {
  margin-top: 40px;
}
@media (max-width: 37.5em) {
  .tab-sub-text {
    margin-top: 20px;
  }
}

@media (max-width: 89.375em) {
  .top-main-nav {
    max-width: 1000px !important;
  }
}
@media (max-width: 37.5em) {
  .lifestyle-tips {
    padding: 0 !important;
  }
}
.lifestyle-tips .text-center {
  font-weight: 700;
  margin: 3.4rem 0;
  color: #994789;
}
@media (max-width: 37.5em) {
  .lifestyle-tips .text-center {
    margin: 25px;
  }
}
.lifestyle-tips .carousel {
  margin-bottom: 4.5rem;
}
@media (max-width: 37.5em) {
  .lifestyle-tips .tab-heading {
    margin-top: 1rem;
    text-align: center;
    padding: 0 2rem;
  }
}
@media (max-width: 37.5em) {
  .lifestyle-tips .tab-text {
    padding-right: 0;
    text-align: center;
    padding: 0 1.5rem;
    padding-bottom: 15px;
  }
}

.video-wrapper {
  position: absolute;
  width: 100%;
}

#video-playback {
  display: none;
  position: relative;
  z-index: 99;
}

#my-video {
  height: 100vh;
  width: 100% !important;
}

.vjs-control-bar {
  margin: 0 auto;
  bottom: 20% !important;
  width: 70% !important;
  background-color: rgba(0, 0, 0, 0.2) !important;
}
@media (max-width: 37.5em) {
  .vjs-control-bar {
    bottom: 13% !important;
    width: 90% !important;
  }
}

.vjs-big-play-button {
  display: none !important;
}

header {
  height: 100vh;
  background-size: cover;
  background-position: right;
  background-repeat: no-repeat;
  background-color: #faa4b7;
}
header.roche-header {
  background-image: url("/assets/media/image/bc-header-desktop.png");
}
@media (max-width: 75em) {
  header.roche-header {
    background-image: url("/assets/media/image/bc-header-mobile.png");
  }
}
header.roche-header h1 > span:first-child {
  font-family: "Merriweather", serif;
  font-weight: 700;
}
header.her2-header {
  background-image: url("/assets/media/image/her2-header-desktop.png");
}
@media (max-width: 56.25em) {
  header.her2-header {
    margin-bottom: -4rem;
  }
}
@media (max-width: 37.5em) {
  header.her2-header {
    background-image: url("/assets/media/image/her2-header-mobile.png");
    background-position: top;
  }
}
@media (max-width: 37.5em) {
  header.her2-header .title-box {
    top: 65%;
  }
}
header.her2-header .title-box h1 {
  font-family: "Merriweather", serif;
  font-weight: 700;
}
@media (max-width: 37.5em) {
  header.her2-header .title-box h1 {
    font-size: 1.5625rem;
    line-height: 1.2;
  }
}

.title-box {
  position: absolute;
  top: 18.125rem;
  left: 13%;
}
@media (max-width: 75em) {
  .title-box {
    top: 10rem;
    left: 6%;
  }
}
@media (max-width: 56.25em) {
  .title-box {
    top: 6.25rem;
    left: 7%;
  }
}
.title-box h1 {
  line-height: 1.5;
  color: #fff;
}
@media (max-width: 37.5em) {
  .title-box h1 {
    line-height: 1.1;
  }
}
.title-box span {
  display: block;
}
.title-box span:first-child {
  font-size: 2.4375rem;
}
@media (max-width: 56.25em) {
  .title-box span:first-child {
    font-size: 1.5rem;
  }
}
@media (max-width: 37.5em) {
  .title-box span:first-child {
    font-size: 2.2rem;
    width: 18.75rem;
  }
}
.title-box span:last-child {
  max-width: 25rem;
  font-size: 1.125rem;
}
@media (max-width: 56.25em) {
  .title-box span:last-child {
    font-size: 0.65rem;
    max-width: 350px;
  }
}
@media (max-width: 37.5em) {
  .title-box span:last-child {
    font-size: 1rem;
    width: 15.5rem;
    margin-top: 0.5rem;
    line-height: 1.4;
  }
}

@media (min-width: 75.0625em) and (max-width: 89.9375em) {
  .title-box {
    left: 6%;
  }
}
#nav {
  animation: moveDown 0.7s ease-in;
  display: none;
  background-color: #d7d2da;
  padding: 1.5625rem 0;
  padding-left: 2.5rem;
  top: 0;
  width: 100%;
  z-index: 9999;
}
#nav > a img {
  width: 4.6875rem;
}
@media (max-width: 37.5em) {
  #nav > a img {
    width: 4.375rem;
  }
}
@media (max-width: 37.5em) {
  #nav {
    padding: 0.625rem 1.5625rem;
    padding-bottom: 0.75rem;
  }
}

.top-main-nav {
  max-width: 71.25rem;
  width: 100%;
  margin: auto;
  display: flex;
  width: 100%;
  height: 6.125rem;
  margin-top: 5rem;
  z-index: 9999;
  position: relative;
  top: 0;
  overflow: hidden;
}
@media (max-width: 37.5em) {
  .top-main-nav {
    height: 5.125rem;
    margin-top: 66px;
  }
}
/* ... */

